--- a/src/Umbraco.Web.UI.Client/src/views/directives/umb-content-name.html
+++ b/src/Umbraco.Web.UI.Client/src/views/directives/umb-content-name.html
@@ -12,7 +12,7 @@
             required   
             val-server-field="Name"/>
 
-        <span class="help-inline" val-msg-for="name" val-toggle-msg="required">Required</span>
+        <span class="help-inline" val-msg-for="name" val-toggle-msg="required"><localize key="general_required">Required</localize></span>
         <span class="help-inline" val-msg-for="name" val-toggle-msg="valServerField">{{contentNameForm.name.errorMsg}}</span>
 
     </div> 
