More visible required notice on content name

--- a/src/Umbraco.Web.UI.Client/src/less/panel.less
+++ b/src/Umbraco.Web.UI.Client/src/less/panel.less
@@ -63,12 +63,15 @@
 }
 
 .umb-headline-editor-wrapper .help-inline{
-  right: 0px;
-  top: 25px;
+  top: 3px;
   position: absolute;
   font-size: 10px;
-  color: @red;
-  }
+  background-color: @red;
+  color: @white;
+  padding: 0 10px 0 5px;
+  left: 20px;
+  line-height: 15px;
+}
 
 .umb-panel-header .umb-nav-tabs{
   bottom: -1px;
