Possibility to include some menu items inline, next to preview/publish buttons

--- a/src/Umbraco.Web.UI.Client/src/views/content/edit.html
+++ b/src/Umbraco.Web.UI.Client/src/views/content/edit.html
@@ -72,6 +72,13 @@
                             </ul>
 
                         </div>
+
+                        <div class="btn-group" ng-repeat="action in actionButtons">
+                            <a class="btn" ng-click="executeMenuItem(action)">
+                                <i class="icon icon-{{action.cssclass}}"></i>
+                                {{action.name}}
+                            </a>
+                        </div>
                     </div>
                 </div>
             </umb-tab>
