Possibility to have custom grid row and cell settings

--- a/src/Umbraco.Web.UI.Client/src/views/propertyeditors/grid/grid.prevalues.html
+++ b/src/Umbraco.Web.UI.Client/src/views/propertyeditors/grid/grid.prevalues.html
@@ -101,6 +101,16 @@
                 <input type="text" class="" ng-model="model.value.columns" />
         </umb-control-group>
 
+        <umb-control-group label="Custom row settings view"
+                           description="">
+            <input type="text" class="" ng-model="model.value.rowSettingsView" />
+        </umb-control-group>
+
+        <umb-control-group label="Custom cell settings view"
+                           description="">
+            <input type="text" class="" ng-model="model.value.cellSettingsView" />
+        </umb-control-group>
+
         <umb-control-group
             label="@grid_settings"
             description="@grid_settingsDetails">
